@@ -1,13 +1,12 @@
 """
-Generate an index file based on the version.cfg file of Zope 2
+Generate an index file based on the ztk-versions.cfg file of the Zope Toolkit
 in order to provide a version specific index page generated to be used
 in combination with easy_install -i <some_url>
 
 Usage:
 
-cli.py tags/2.12.0a3 /tmp/index/2.12.0a3
-cli.py branches/2.12 /tmp/index/2.12
-
+cli.py tags/1.0a1 /tmp/index/1.0a1
+cli.py branches/1.0 /tmp/index/1.0
 """
 
 import os
@@ -21,8 +20,8 @@ from zope.z2release.utils import write_index
 
 def main():
     if len(sys.argv) != 3:
-        print 'Usage: z2_kgs <tag-name> <destination-dirname>'
-        print 'Example: z2_kgs tags/2.12.1 /var/www/download.zope.org/Zope2/index/2.12.1/'
+        print 'Usage: ztk_kgs <tag-name> <destination-dirname>'
+        print 'Example: ztk_kgs tags/1.0a1 /var/www/download.zope.org/zopetoolkit/index/1.0a1/' 
         sys.exit(1)
 
     tag = sys.argv[1]
@@ -32,18 +31,23 @@ def main():
         os.makedirs(dirname)
 
     version = tag.split('/')[-1]
-    versions_url = 'http://svn.zope.org/*checkout*/Zope/%s/versions.cfg' % tag
+    versions_url = 'http://svn.zope.org/*checkout*/zopetoolkit/%s/ztk-versions.cfg' % tag
     print >>sys.stderr, 'Fetching %s' % versions_url
     data = urllib.urlopen(versions_url).read()
-    version_file = os.path.join(dirname, 'versions.cfg')
+    version_file = os.path.join(dirname, 'ztk-versions.cfg')
     file(version_file, 'w').write(data)
+
+    app_versions_url = 'http://svn.zope.org/*checkout*/zopetoolkit/%s/zopeapp-versions.cfg' % tag
+    print >>sys.stderr, 'Fetching %s' % app_versions_url
+    data = urllib.urlopen(app_versions_url).read()
+    app_version_file = os.path.join(dirname, 'zopeapp-versions.cfg')
+    file(app_version_file, 'w').write(data)
 
     CP = CasePreservingConfigParser()
     CP.read(version_file)
 
     server = Server('http://pypi.python.org/pypi')
 
-    write_index(server, 'Zope2', version, dirname)
     for package in CP.options('versions'):
         version = CP.get('versions', package)
         if '#' in version:
